[project]
name = "technical-writer-agent"
version = "0.1.0"
description = "An AI agent that refactors technical articles using Cognitive Load Theory"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
